--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port $PORT --host",
+  "start": "npm run preview"
+
+
   },
   "dependencies": {
     "axios": "^1.10.0",
