--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://yadavrahul9414866598:KT154iR6zANFGkgc@cluster0.s3tpcii.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://yadavrahul9414866598:JFL0gPrHvfKW42Pu@cluster0.s3tpcii.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0
 
 
 
